поменял стиль select, поменял плейсхолдер на партию.

--- a/comers/templates/comers/index.html
+++ b/comers/templates/comers/index.html
@@ -134,7 +134,7 @@
                                                 list="supplier-options"
                                                 placeholder="Начните вводить название поставщика..."
                                                 autocomplete="off"
-                                                class="supplier-input">
+                                                class="input_wrapper supplier-input">
                                             <div class="input-icons">
                                                 <span id="clear-search" class="clear-icon" title="Очистить поиск">✕</span>
                                                 <span id="toggle-list" class="toggle-icon" title="Показать всех поставщиков">▼</span>
