авто кнопка начало

--- a/static/finder/css/components/any.css
+++ b/static/finder/css/components/any.css
@@ -162,3 +162,9 @@
 .animate_process svg {
     align-content: center;
 }
+
+.auto_button {
+    margin-left: 20px;
+    border: 1px solid;
+    width: -webkit-fill-available;
+}
