--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -44,6 +44,9 @@
                     </form>    
                 </div>
             </div> 
+                <div class="auto_button">
+                    <button id="magic_button"  class="button">AUTO</button>
+                </div>
             <div class="info_window">
             </div>
             <div class="info_update">
