Получение данных из буфера отправка на сервер и минимальная моденизация

--- a/finder/templates/finder/index.html
+++ b/finder/templates/finder/index.html
@@ -375,6 +375,7 @@
     </script>
     <script src='{% static 'shared/js/components/popup_manager.js' %}'></script>
     <script src='{% static "finder/js/popups.js"%}'></script> 
+    <script src='{% static "finder/js/ClickBoard.js"%}'></script> 
     <script src='{% static "finder/js/auth.js"%}'></script> 
     <script src='{% static "finder/js/search_finder_input.js"%}'></script> 
     <script src='{% static "finder/js/add_pin_positions.js"%}'></script>
